@@ -34,7 +34,8 @@
     dummy  python: here.recordError(type, message);
     dummy  python: here.REQUEST.set('edit_mode', 1);
     dummy  python: getattr(request, 'editor', None) and request.SESSION.set('editor', request.editor) or None;
-    editor python: request.SESSION.get('editor', None) or view.service_members.get_member(view.REQUEST.AUTHENTICATED_USER.getUserName()).editor();
+    current_member python: view.service_members.get_member(view.REQUEST.AUTHENTICATED_USER.getId());
+    editor python: request.SESSION.get('editor', None) or current_member.editor();
 
 ">
 
@@ -244,7 +245,7 @@
 <!-- ______________ user tools ______________ -->
 </span>
 <div class="personalbar"
-  tal:define="userid request/AUTHENTICATED_USER/getUserName">
+  tal:define="userid current_member/fullname">
   <div style="float: left;">
     <a href=""
       title="Change your settings: alt-~"
