@@ -19,6 +19,9 @@ Under development
       - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
         from and to objects are the same.
   
+      - Handle user with user id different from login properly
+        (issue 1471)
+
     Ported from 1.5 branch
 
       - The new lookup window was registering resources under the name
